use RESTapi for saving newPosts!

--- a/src/components/simpe_components/postItem/postItem.module.css
+++ b/src/components/simpe_components/postItem/postItem.module.css
@@ -88,7 +88,7 @@
         display: flex;
     }
     .post{
-        width: 66%; /* Уменьшить ширину до половины экрана */
+        width: 100%; /* Уменьшить ширину до половины экрана */
         margin: 0 auto; /* Центрировать блок */
         padding: 0.5em; /* Уменьшить внутренние отступы */
     }
@@ -96,7 +96,7 @@
 }
 @media (max-width:400px){
     .post{
-        width: 50%; /* Уменьшить ширину до половины экрана */
+        width: 100%; /* Уменьшить ширину до половины экрана */
         margin: 0 auto; /* Центрировать блок */
         padding: 0.5em; /* Уменьшить внутренние отступы */
     }
@@ -104,4 +104,8 @@
         font-size: 1em;
         
     }
+}
+.tag__content{
+    display: flex;
+    gap: 10px;
 }
